build(ff4j-store-ignite): use java 17 and semantic versioning