@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.ff4j</groupId>
 		<artifactId>ff4j-parent</artifactId>
-		<version>1.10-SNAPSHOT</version>
+		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 
 	<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
@@ -24,6 +24,25 @@
 		<license.licenseResolver>${project.baseUri}/../src/license</license.licenseResolver>
 		<jsr107.version>1.0.0</jsr107.version>
 		<ignite.version>1.9.0</ignite.version>
+
+		<argLine>
+			--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+			--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+			--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+			--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
+			--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+			--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+			--add-opens=java.base/java.io=ALL-UNNAMED
+			--add-opens=java.base/java.nio=ALL-UNNAMED
+			--add-opens=java.base/java.util=ALL-UNNAMED
+			--add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+			--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+			--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+			--add-opens=java.base/java.lang=ALL-UNNAMED
+			--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+			--add-opens=java.base/java.math=ALL-UNNAMED
+			--add-opens=java.sql/java.sql=ALL-UNNAMED
+		</argLine>
 	</properties>
 	
 	<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
@@ -71,25 +90,5 @@
 			<artifactId>jansi</artifactId>
 			<version>1.18</version>
 		</dependency>
-
 	</dependencies>
-
-
-	<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-	<!-- ~       BUILD              ~ -->
-	<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-	<build>
-		<plugins>
-			
-			<plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            
-		</plugins>
-	</build>
-
 </project>
